# npptranscoding

./: CMakeLists.txt  Readme.md  fast_io_test.cc  fast_io_test_emoji.cc  notepad++test.cc  notepad++test_emoji.cc
fast_io/: pch.hpp
npp/: CMakeLists.txt  FileInterface.cpp  FileInterface.h  Parameters_micro.h  Utf8_16.cpp  Utf8_16.h  pch.hpp
